--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,8 @@
     <string name="action_sign_in_short">DAFTAR</string>
     <string name="email">Email</string>
     <string name="name">Name</string>
+    <string name="nim">Nim</string>
+    <string name="angkatan">Angkatan</string>
     <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
     <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
     <string name="change_email">Change Email</string>
